Added a git logo at the bottom + link to git profile

--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
     <div id="currentRound"></div>
     <div id="scoring"></div>
 </body>
+<footer><a href=https://github.com/IrnMonStronk> <img id="gh-logo" src="githublogo.png" alt="github logo"/>Hristo Dikov</a></footer>
 </html>
